# Convolutional-KANs

./: .gitignore  Eval_FashionMNIST_torchlike.ipynb  Hiperparam_Tuning_MNIST.ipynb  KANConvs_MLP_2.py  LICENSE  README.md  a.py  animation.py  balanced_split.py  calculate_training_times_fashion.py  calculate_training_times_mnist.py  cifar.ipynb  compute_flops.py  convolution.py  evaluations.py  evaluations_cifar_32x32.ipynb  experiment_28x28.csv  experiment_28x28.ipynb  flops_mnist.txt  generic_train.py  grid_size_parameters.ipynb  hiperparam_tuning.py  hiperparam_tuning_without_cv.py  hiperparam_tuning_without_cv_fashion.py  instance_train_mnist.py  interpretability_animation.py  kan_convolutional.py  learned_filters.ipynb  pruebas.ipynb  requirements.txt  test_training.py  tests.ipynb  train_without_tuning.py
ConvAnimation-main/: .gitignore  Makefile  README.md  pyproject.toml
ConvAnimation-main/.github/workflows/: main.yml
ConvAnimation-main/conv_animation/: conv_animation.py  convolution.py  get_mnist_image.py  image_processing.py  image_visualization.py  mp42gif.py
ConvAnimation-main/conv_animation/media/Tex/: 00a390087f1d6104.tex  048d48516e8267a5.tex  136262b5bbdc1266.tex  19fd6fb25e75bf92.tex  1bc0d14c5d455f4a.tex  23c92f09adb2993b.tex  28375e74ec0cc2b0.tex  2a8e3a82ae47e071.tex  363657f4067cc925.tex  39ad6fe3fde34d41.tex  41ea6e927ddb948a.tex  466855acf7bff6f1.tex  497ee1486c23f56f.tex  4fafdc523e5bc1f9.tex  54262e0810a36460.tex  5a0f198c93a292e9.tex  5b9e1f51de32ad42.tex  5c7999abcae6519b.tex  (+29 more)
ConvAnimation-main/tests/: conv_test.py  initial_test.py
(+245 files in other folders)
